--- a/web/registrazione.html
+++ b/web/registrazione.html
@@ -5,26 +5,15 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
-    <head>
-        <title>Homepage</title>
+     <head>
+        <title>Registrazione</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Gianluca Pala">
         <meta name="keywords" content="FPW, Progetto, Esercitazione, Java, HTML">
-        <meta name="description" content="Homepage delle esercitazioni di FPW">
+        <meta name="description" content="Pagina di registrazione delle esercitazioni di FPW">
     </head>
     <body>
-        <div>
-            
-            <h1>La mia Esercitazione</h1>
-            <br/>
-            <img title="Pagina Principale" alt="logo di Java" src="java logo.jpg">  
-            <div>
-            </div>
-            <h2>Lista pagine</h2>
-            <ul>
-                <li><a href="https://google.com">Ti sei perso? </a></li>
-            </ul>
-        </div>
+        <div>TODO write content</div>
     </body>
 </html>
