--- a/web/index.html
+++ b/web/index.html
@@ -6,11 +6,25 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Homepage</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Gianluca Pala">
+        <meta name="keywords" content="FPW, Progetto, Esercitazione, Java, HTML">
+        <meta name="description" content="Homepage delle esercitazioni di FPW">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>
+            
+            <h1>La mia Esercitazione</h1>
+            <br/>
+            <img title="Pagina Principale" alt="logo di Java" src="img/java logo.jpg">  
+            <div>
+            </div>
+            <h2>Lista pagine</h2>
+            <ul>
+                <li><a href="https://google.com">Ti sei perso? </a></li>
+            </ul>
+        </div>
     </body>
 </html>
