Sistemato l'intero progetto

--- a/web/index.html
+++ b/web/index.html
@@ -16,12 +16,12 @@ and open the template in the editor.
     <body>
         <div>
             
-            <h1>La mia Esercitazione</h1>
+            <h1>Esercitazione FPW </h1>
             <br/>
             <img title="Pagina Principale" alt="logo di Java" src="img/java logo.jpg">  
             <div>
             </div>
-            <h2>Lista pagine</h2>
+            <h2></h2>
             <ul>
                 <li><a href="https://google.com">Ti sei perso? </a></li>
             </ul>
