--- a/web/articoli.html
+++ b/web/articoli.html
@@ -14,6 +14,23 @@ and open the template in the editor.
         <meta name="description" content="Articoli delle esercitazioni di FPW">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div><h1>fai qualcosa qui oppure <a href="index.html"> torna indietro </a></h1></div>
+        <div>
+            <div>
+                <h2>Tabella articoli</h2>
+               <table>
+<tr>
+<th>Nome</th>
+<th>Data</th>
+<th>Articolo</th>
+</tr>
+<tr>
+<td>Gianluca Pala</td>
+<td>18/03/2019</td>
+<td>un articolo giusto per provare</td>
+</tr>
+</table> 
+            </div>
+        </div>
     </body>
 </html>
