--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@ and open the template in the editor.
             <h2></h2>
             <ul>
                 <li><a href="https://google.com">Ti sei perso? </a></li>
+                <li><a href="articoli.html">Articoli</a></li>
             </ul>
         </div>
     </body>
