--- a/web/registrazione.html
+++ b/web/registrazione.html
@@ -14,6 +14,6 @@ and open the template in the editor.
         <meta name="description" content="Pagina di registrazione delle esercitazioni di FPW">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>qua faccio la registrazione</div>
     </body>
 </html>
