--- a/web/registrazione.html
+++ b/web/registrazione.html
@@ -14,6 +14,11 @@ and open the template in the editor.
         <meta name="description" content="Pagina di registrazione delle esercitazioni di FPW">
     </head>
     <body>
-        <div>qua faccio la registrazione</div>
+        <div>
+            <h1>fai qualcosa qui oppure <a href="index.html"> torna indietro </a></h1>
+        </div>
+        <div>
+            
+        </div>
     </body>
 </html>
