--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,7 @@ and open the template in the editor.
             <ul>
                 <li><a href="https://google.com">Ti sei perso? </a></li>
                 <li><a href="articoli.html">Articoli</a></li>
+                <li><a href="registrazione.html">Registrazione</a></li>
             </ul>
         </div>
     </body>
