modificato il sito di registrazione

--- a/web/registrazione.html
+++ b/web/registrazione.html
@@ -18,7 +18,19 @@ and open the template in the editor.
             <h1>fai qualcosa qui oppure <a href="index.html"> torna indietro </a></h1>
         </div>
         <div>
-            
+            <form action="index.html" method="post">
+                <label for="id_nomeutente">Nome: </label>
+                <input type="text" name="nomedell'utente" value="Tizio">
+                </br>
+                <label for="id_cognomeutente">Cognome: </label>
+                <input type="text" name="cognomedell'utente" value="Caio">
+                </br>
+                <label for="id_password">Password: </label>
+                <input type="password" name="passwordutente" value="password">
+                </br>
+                <input type="submit" value="Submit"/>
+                
+            </form>
         </div>
     </body>
 </html>
